--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -1,8 +1,8 @@
-FROM openjdk:8-jdk-alpine
-RUN addgroup -S spring && adduser -S spring -G spring
-USER spring:spring
-ARG DEPENDENCY=target/dependency
-COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY ${DEPENDENCY}/META-INF /app/META-INF
-COPY ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","hello.Application"]
+FROM openjdk:10-jre-slim
+
+WORKDIR /app
+COPY ./target/gs-spring-boot-docker-0.1.0.jar /app
+
+EXPOSE 8080
+
+CMD ["java", "-jar", "/app/gs-spring-boot-docker-0.1.0.jar"]
